--- a/_posts/2020-04-10-dns历史解析记录在线查询.md
+++ b/_posts/2020-04-10-dns历史解析记录在线查询.md
@@ -1,7 +1,7 @@
 ---
 title: "dns历史解析记录查询"
 date: 2020-04-10 11:56:23 +0800
-category: PHP
+category: 信息收集
 tags: [DNS, 域名解析记录]
 excerpt: DNS历史解析记录
 
