--- a/_posts/2020-08-31-内网渗透-GPP(组策略)的利用.md
+++ b/_posts/2020-08-31-内网渗透-GPP(组策略)的利用.md
@@ -1,9 +1,9 @@
 ---
-title: "域渗透-GPP(组策略)的利用"
+title: "内网渗透-GPP(组策略)的利用"
 date: 2020-08-31 11:56:23 +0800
-category: 域渗透
+category: 内网渗透
 tags: [内网,域]
-excerpt: 域渗透-GPP(组策略)的利用
+excerpt: 内网渗透-GPP(组策略)的利用
 ---
 # 组策略偏好
 ## 基础
